--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-      background-image: url(ai.jpg);
+      background-image: url(aii.avif);
        background-repeat: no-repeat;
             background-size: cover;
 }
